ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingres
  namespace: default
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts: 
        # - wisecow.35.227.89.156.nip.io
        - wisecow.35.231.11.241.nip.io
      secretName: wisecow-tls-selfsigned
  rules:
    - host: wisecow.35.231.11.241.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wisecow-serv
                port:
                  number: 4499
